--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: MCGambling
 version: '1.0-SNAPSHOT'
 main: org.powell.mCGambling.MCGambling
 api-version: '1.21'
+depend: [GuiApi]
+commands:
+  mcg:
