--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,12 @@
             <version>1.21.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.powell</groupId>
+            <artifactId>guiapi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>/Users/powellfamily/Dropbox/My Mac (iMac.fios-router.home)/Documents/02 Caleb 0.2/MODRITH PROJECTS/GuiApi/target/guiapi-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
