--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <guiapi.path>${project.basedir}/../GuiApi/target/guiapi-1.0-SNAPSHOT.jar</guiapi.path>
     </properties>
 
     <build>
@@ -73,7 +74,7 @@
             <artifactId>guiapi</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>/Users/powellfamily/Dropbox/My Mac (iMac.fios-router.home)/Documents/02 Caleb 0.2/MODRITH PROJECTS/GuiApi/target/guiapi-1.0-SNAPSHOT.jar</systemPath>
+            <systemPath>${guiapi.path}</systemPath>
         </dependency>
     </dependencies>
 </project>
